package com.design.factory.example.pizzaaf;

public class BlackOlives implements Veggies {

	public String toString() {
		return "Black Olives";
	}
}
