package com.design.factory.example.pizzaaf;

public interface Cheese {
	public String toString();
}
