package com.design.factory.example.pizzaaf;

public interface Clams {
	public String toString();
}
