package com.design.factory.example.pizzaaf;

public interface Dough {
	public String toString();
}
