package com.design.factory.example.pizzaaf;

public class Eggplant implements Veggies {

	public String toString() {
		return "Eggplant";
	}
}
