package com.design.factory.example.pizzaaf;

public class Garlic implements Veggies {

	public String toString() {
		return "Garlic";
	}
}
