package com.design.factory.example.pizzaaf;
public class Mushroom implements Veggies {

	public String toString() {
		return "Mushrooms";
	}
}
