package com.design.factory.example.pizzaaf;
public interface Sauce {
	public String toString();
}
