package com.design.factory.example.pizzaaf;

public interface Veggies {
	public String toString();
}
